[package]
name = "random-pickfile"
version = "0.1.0"
edition = "2021"
authors = ["1379", "EternalNightYeah2@yeah.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
p-utils={ version="^0.2.0", path="./p-utils", features=["std", "random"] }
# p-utils={ version="^0.2.0", git="https://www.github.com//EternalNight996/p-utils", features=["std", "random"] }
config = { version="0.13.1", features=["ini", "toml"] }
serde={ version="^1.0.130", default-features=false, features=["derive"] }
serde_json="^1.0.68"
serde_derive = "1.0.8"
chrono = "*"
zip = "0.6.2"
walkdir = "2.3.2"

[[bin]]
name = "random-pickfile"
path = "src/main.rs"

[build-dependencies]
# embed-resource = "1.5.1"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"