[package]
name = "random-pickfile"
version = "0.2.0"
edition = "2021"
license = "GNU-3"
authors = ["1379", "EternalNightYeah2@yeah.net"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
once_cell = "^1.1"
futures = { version = "0.3.2", default-features = false, features = [
    "alloc",
    "executor",
] }
tokio = { version = "0.2", features = ["full"] }
walkdir = "2.3.2"
zip = { version = "0.6.2", default-features = false, features = [
    "bzip2",
    "deflate",
    "zstd",
] }
config = { version = "0.13.1", features = ["ini", "toml"] }
p-utils = { version = "^0.2.0", path = "./p-utils", features = ["random"] }
# p-utils={ version="^0.2.0", git="https://www.github.com//EternalNight996/p-utils", features=["std", "random"] }
serde = { version = "^1.0.130", default-features = false, features = [
    "derive",
] }
serde_json = "^1.0.68"
serde_derive = "1.0.8"
chrono = "0.4"

# [target.'cfg(windows)'.dependencies]
# winapi = { version = "0.3.9", features = [
#     "winuser",
#     "winuser",
#     "wingdi",
#     "windef",
#     "dwmapi",
#     "shellscalingapi",
# ] }

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.winres]
OriginalFilename = "random-pickfile.exe"
LegalCopyright = "Copyright 1379 © 2022"

[[bin]]
name = "random-pickfile"
path = "src/main.rs"
